--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-#  - title: "Publications"
-#    url: /publications/
+  - title: "Publications"
+    url: /publications/
 
 #  - title: "Talks"
 #    url: /talks/    
@@ -24,8 +24,8 @@ main:
   - title: "Biography"
     url: /bio/
     
-  - title: "Science"
-    url: /science/
+#  - title: "Science"
+#    url: /science/
 
   - title: "Contact"
     url: /contact/
