--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
+
 # Site Settings
 locale                   : "en-US"
 title                    : "James M Heather"
@@ -82,7 +83,7 @@ analytics:
 author:
   name             : "Jamie Heather"
   avatar           : "jh.png"
-  bio              : "TCR | pMHC | immunology | molecular biology | bioinformatics"
+  bio              : "<b>ʤeɪmi hɛðə˞</b><br><br>TCR | pMHC | immunology | molecular biology | bioinformatics"
   location         : "Boston, US"
   employer         : "MGH/HMS"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
