2024-05-27: add tools + resources, minor pub fixes

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,6 +23,9 @@ main:
 
   - title: "Biography"
     url: /bio/
+
+  - title: "Tools and Resources"
+    url: /tools-and-resources/
     
 #  - title: "Science"
 #    url: /science/
