2024-05-30: testing contact form

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Jamie Heather"
   avatar           : "jh.png"
-  bio              : "<b>ʤeɪmi hɛðə˞</b><br><br>TCR | pMHC | immunology | molecular biology | bioinformatics"
+  bio              : "<b>ʤeɪmi hɛðə˞</b> | he/him<br><br>TCR | pMHC | immunology | molecular biology | bioinformatics"
   location         : "Boston, US"
   employer         : "MGH/HMS"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
